# dayta

./: .gitmodules  circle.yml
.circlec/: config.yml
.circleci/: config.yml
client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: App.tsx  Dataset.tsx  DatasetContainer.tsx  ItemChart.tsx  UserPage.tsx  UserPageContainer.tsx  index.css  index.tsx
server/: .gitignore  LICENSE  README.md  dayta.cabal  stack.yaml
server/app/: CmdLine.hs  Config.hs  Main.hs
server/db-migrations/: 001-create-dataitem.sql  002-create-dataset.sql  003-create-dataset_field.sql  004-item-references-dataset.sql  005-populate-dataset-item-references.sql  006-data_item-drop-dataset.sql  007-dataset-add-user.sql
server/src/Dayta/: Api.hs  DataItem.hs  DataSet.hs  Server.hs
server/src/Dayta/Db/: ColumnInfo.hs  DataItem.hs  DataSet.hs  Field.hs  Migration.hs  Username.hs  Util.hs  Validate.hs
server/src/Dayta/Db/DataSet/: Id.hs
server/src/Dayta/Handler/: DataItem.hs  DataSet.hs
server/src/Dayta/Server/: State.hs
server/src/Dayta/Types/: DataItem.hs  Dataset.hs  Dayta.hs  Field.hs  Username.hs
