name:                dayta
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hesselink/dayta#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink
maintainer:          hesselink@gmail.com
copyright:           Erik Hesselink, 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          db-migrations/*.sql

library
  hs-source-dirs:      src
  exposed-modules:     Dayta.Api
                     , Dayta.DataItem
                     , Dayta.DataSet
                     , Dayta.Db.DataItem
                     , Dayta.Db.DataSet
                     , Dayta.Db.DataSet.Id
                     , Dayta.Db.Field
                     , Dayta.Db.Username
                     , Dayta.Db.Util
                     , Dayta.Db.Migration
                     , Dayta.Handler.DataItem
                     , Dayta.Handler.DataSet
                     , Dayta.Server
                     , Dayta.Server.State
                     , Dayta.Types.Dataset
                     , Dayta.Types.DataItem
                     , Dayta.Types.Dayta
                     , Dayta.Types.Field
                     , Dayta.Types.Username
                     , Paths_dayta
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cassava
                     , containers
                     , file-embed
                     , monad-control
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , postgresql-simple-migration
                     , product-profunctors
                     , profunctors
                     , resource-pool
                     , servant
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers-base
                     , unordered-containers
                     , utf8-string
                     , vector
                     , wai-app-static
                     , yaml
  default-language:    Haskell2010

executable dayta-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , dayta
                     , optparse-applicative
                     , postgresql-simple
                     , resource-pool
                     , servant-server
                     , yaml
                     , wai
                     , warp
  default-language:    Haskell2010
  other-modules:       CmdLine
                     , Config

test-suite dayta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dayta
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hesselink/dayta
